# PROMISING

./: Makefile.in  README.md  configure  configure.ac  makefile
data/examples/: adrenoleukodystrophy.txt  coenzyme_q10_deficiency.txt  crohns_disease.txt  fanconi_anemia.gmt  fanconi_anemia.txt  hdl_anomaly.txt  height.txt  hypertension.tsv  mucopolysaccharidoses.txt  porokeratosis.txt  rheumatoid_arthritis.txt  vitiligo.txt
include/: IModuleScorer.h
src/: CompleteGraphScorer.cpp  CompleteGraphScorer.h  FastScorer.cpp  FastScorer.h  Makefile.am  Makefile.in  PValueModuleScorer.cpp  PValueModuleScorer.h  coreroutines.cpp  coreroutines.h  graph_kernels.cpp  main.cpp  makefile  pullentriesfrommat.cpp
